--- a/src/app/components/client/page/detail-service/detail-service.component.html
+++ b/src/app/components/client/page/detail-service/detail-service.component.html
@@ -101,6 +101,7 @@
 
                     <div class="col-span-12 text-center mt-5 ">
                         <button style="font-size: 17px;" pButton pRipple label="Devis du service" routerLink="/auth/login" [rounded]="true" ></button>
+                        <button style="font-size: 17px;" pButton pRipple label="Devis du service" routerLink="/auth/login" [rounded]="true" ></button>
                     </div>
 
                 </div>
