--- a/src/app/components/client/page/topbar-client/topbar-client.component.html
+++ b/src/app/components/client/page/topbar-client/topbar-client.component.html
@@ -39,7 +39,7 @@
         </li>
     </ul>
     <div class="flex border-t lg:border-t-0 border-surface py-4 lg:py-0 mt-4 lg:mt-0 gap-2">
-        <button pButton pRipple label="Login" routerLink="/auth/login" [rounded]="true" [text]="true" ></button>
-        <button pButton pRipple label="register" routerLink="/auth/login" [rounded]="true" ></button>
+        <button pButton pRipple label="Login" routerLink="/login" [rounded]="true" [text]="true" ></button>
+        <button pButton pRipple label="register" routerLink="/inscription" [rounded]="true" ></button>
     </div>
 </div>
