--- a/src/app/components/manager/page/dashboard/dashboard.component.html
+++ b/src/app/components/manager/page/dashboard/dashboard.component.html
@@ -1,4 +1,9 @@
+<div class="flex justify-end gap-3 mb-3 ">
+    <p-calendar  view="month" dateFormat="mm" placeholder="Mois"></p-calendar>
+    <p-calendar  view="year" dateFormat="yy" placeholder="Année"></p-calendar>
+</div>
 <div class="grid grid-cols-12 gap-8">
+
     <app-dashboard-kpi class="contents" />
     <div class="col-span-12 xl:col-span-6">
         <app-dashboard-chart-bar/>
