--- a/src/app/components/manager/component/dashboard-chart-bar/dashboard-chart-bar.component.html
+++ b/src/app/components/manager/component/dashboard-chart-bar/dashboard-chart-bar.component.html
@@ -1,4 +1,10 @@
 <div class="card !mb-8">
-    <div class="font-semibold text-xl mb-4">Taux d'accupation du garage (%)</div>
+    <div class="flex gap-4">
+        <p class="font-semibold text-xl mb-4">Taux d'accupation du garage (%)</p>
+        <div class="flex gap-3 mb-3 w-[50%]">
+            <p-calendar  view="month" dateFormat="mm" placeholder="Mois"></p-calendar>
+            <p-calendar  view="year" dateFormat="yy" placeholder="Année"></p-calendar>
+        </div>
+    </div>
     <p-chart type="bar" [data]="barData" [options]="barOptions"></p-chart>
 </div>
