--- a/src/app/components/manager/component/dashboard-chart-donut/dashboard-chart-donut.component.html
+++ b/src/app/components/manager/component/dashboard-chart-donut/dashboard-chart-donut.component.html
@@ -1,4 +1,10 @@
 <div class="card !mb-8">
-<div class="font-semibold text-xl mb-4">Répartition des services demandés</div>
-<p-chart type="pie" [data]="pieData" [options]="pieOptions"></p-chart>
+    <div class="flex">
+        <p class="font-semibold text-xl mb-4">Répartition des services demandés</p>
+        <div class="flex gap-3 mb-3 w-[50%]">
+            <p-calendar  view="month" dateFormat="mm" placeholder="Mois"></p-calendar>
+            <p-calendar  view="year" dateFormat="yy" placeholder="Année"></p-calendar>
+        </div>
+    </div>
+    <p-chart type="pie" [data]="pieData" [options]="pieOptions"></p-chart>
 </div>
