--- a/src/app/components/manager/component/dashboard-chart-horizontal-bar/dashboard-chart-horizontal-bar.component.html
+++ b/src/app/components/manager/component/dashboard-chart-horizontal-bar/dashboard-chart-horizontal-bar.component.html
@@ -1,4 +1,11 @@
 <div class="card !mb-8">
-    <div class="font-semibold text-xl mb-4">Nombre d'intervention par mécanicien</div>
+    <div class="flex">
+        <p class="font-semibold text-xl mb-4">Nombre d'intervention par mécanicien</p>
+        <div class="flex gap-3 mb-3 w-[50%]">
+            <p-calendar  view="date" dateFormat="dd" placeholder="Jour"></p-calendar>
+            <p-calendar  view="month" dateFormat="mm" placeholder="Mois"></p-calendar>
+            <p-calendar  view="year" dateFormat="yy" placeholder="Année"></p-calendar>
+        </div>
+    </div>
     <p-chart type="bar" [data]="barData" [options]="barOptions"></p-chart>
 </div>
