feat:client-devis

--- a/src/app/components/client/page/detail-service/detail-service.component.html
+++ b/src/app/components/client/page/detail-service/detail-service.component.html
@@ -1,3 +1,6 @@
+
+
+
 <div class="bg-surface-0 dark:bg-surface-900">
     <div id="home" class="landing-wrapper overflow-hidden">
         <app-topbar-client class="py-6 px-6 mx-0 md:mx-12 lg:mx-20 lg:px-20 flex items-center justify-between fix lg:static" />
@@ -6,72 +9,6 @@
                     <div class="col-span-12 text-center mt-20 mb-6">
                         <div class="text-surface-900 dark:text-surface-0 font-semibold text-3xl">Nom du service</div>
                     </div>
-
-                    <div class="col-span-12 md:col-span-12 lg:col-span-4 p-0 lg:pr-8 lg:pb-8 mt-6 lg:mt-0">
-                        <div style="min-height: 160px; padding: 2px; border-radius: 10px;  background: linear-gradient(90deg, rgba(1, 18, 0, 0.2), rgba(45, 0, 0, 0.2)), linear-gradient(180deg, rgba(28, 0, 29, 0.2), rgba(0, 17, 31, 0.2))">
-                            <div class="p-4 bg-surface-0 dark:bg-surface-900" style="border-radius: 8px; background-color:#fff7f6">
-                                <div class="flex items-center justify-center bg-yellow-200 mb-4" style="width: 3.5rem; height: 3.5rem; border-radius: 10px">
-                                    <i class="pi pi-fw pi-users !text-2xl text-yellow-700"></i>
-                                </div>
-                                <h5 class="mb-2 text-surface-900 dark:text-surface-0">Liste tache</h5>
-                                <p class="text-surface-600 dark:text-surface-200 break-words">
-                                    test
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-span-12 md:col-span-12 lg:col-span-4 p-0 lg:pr-8 lg:pb-8 mt-6 lg:mt-0">
-                        <div style="min-height: 160px; padding: 2px; border-radius: 10px;  background: linear-gradient(90deg, rgba(1, 18, 0, 0.2), rgba(45, 0, 0, 0.2)), linear-gradient(180deg, rgba(28, 0, 29, 0.2), rgba(0, 17, 31, 0.2))">
-                            <div class="p-4 bg-surface-0 dark:bg-surface-900" style="border-radius: 8px; background-color:#fff7f6">
-                                <div class="flex items-center justify-center bg-yellow-200 mb-4" style="width: 3.5rem; height: 3.5rem; border-radius: 10px">
-                                    <i class="pi pi-fw pi-users !text-2xl text-yellow-700"></i>
-                                </div>
-                                <h5 class="mb-2 text-surface-900 dark:text-surface-0">Liste tache</h5>
-                                <p class="text-surface-600 dark:text-surface-200 break-words">
-                                    test
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-span-12 md:col-span-12 lg:col-span-4 p-0 lg:pr-8 lg:pb-8 mt-6 lg:mt-0">
-                        <div style="min-height: 160px; padding: 2px; border-radius: 10px;  background: linear-gradient(90deg, rgba(1, 18, 0, 0.2), rgba(45, 0, 0, 0.2)), linear-gradient(180deg, rgba(28, 0, 29, 0.2), rgba(0, 17, 31, 0.2))">
-                            <div class="p-4 bg-surface-0 dark:bg-surface-900" style="border-radius: 8px; background-color:#fff7f6">
-                                <div class="flex items-center justify-center bg-yellow-200 mb-4" style="width: 3.5rem; height: 3.5rem; border-radius: 10px">
-                                    <i class="pi pi-fw pi-users !text-2xl text-yellow-700"></i>
-                                </div>
-                                <h5 class="mb-2 text-surface-900 dark:text-surface-0">Liste tache</h5>
-                                <p class="text-surface-600 dark:text-surface-200 break-words">
-                                    test
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-span-12 md:col-span-12 lg:col-span-4 p-0 lg:pr-8 lg:pb-8 mt-6 lg:mt-0">
-                        <div style="min-height: 160px; padding: 2px; border-radius: 10px;  background: linear-gradient(90deg, rgba(1, 18, 0, 0.2), rgba(45, 0, 0, 0.2)), linear-gradient(180deg, rgba(28, 0, 29, 0.2), rgba(0, 17, 31, 0.2))">
-                            <div class="p-4 bg-surface-0 dark:bg-surface-900" style="border-radius: 8px; background-color:#fff7f6">
-                                <div class="flex items-center justify-center bg-yellow-200 mb-4" style="width: 3.5rem; height: 3.5rem; border-radius: 10px">
-                                    <i class="pi pi-fw pi-users !text-2xl text-yellow-700"></i>
-                                </div>
-                                <h5 class="mb-2 text-surface-900 dark:text-surface-0">Liste tache</h5>
-                                <p class="text-surface-600 dark:text-surface-200 break-words">
-                                    test
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-span-12 md:col-span-12 lg:col-span-4 p-0 lg:pr-8 lg:pb-8 mt-6 lg:mt-0">
-                        <div style="min-height: 160px; padding: 2px; border-radius: 10px;  background: linear-gradient(90deg, rgba(1, 18, 0, 0.2), rgba(45, 0, 0, 0.2)), linear-gradient(180deg, rgba(28, 0, 29, 0.2), rgba(0, 17, 31, 0.2))">
-                            <div class="p-4 bg-surface-0 dark:bg-surface-900" style="border-radius: 8px; background-color:#fff7f6">
-                                <div class="flex items-center justify-center bg-yellow-200 mb-4" style="width: 3.5rem; height: 3.5rem; border-radius: 10px">
-                                    <i class="pi pi-fw pi-users !text-2xl text-yellow-700"></i>
-                                </div>
-                                <h5 class="mb-2 text-surface-900 dark:text-surface-0">Liste tache</h5>
-                                <p class="text-surface-600 dark:text-surface-200 break-words">
-                                    test
-                                </p>
-                            </div>
-                        </div>
-                    </div>
                     <div class="col-span-12 md:col-span-12 lg:col-span-4 p-0 lg:pr-8 lg:pb-8 mt-6 lg:mt-0">
                         <div style="min-height: 160px; padding: 2px; border-radius: 10px;  background: linear-gradient(90deg, rgba(1, 18, 0, 0.2), rgba(45, 0, 0, 0.2)), linear-gradient(180deg, rgba(28, 0, 29, 0.2), rgba(0, 17, 31, 0.2))">
                             <div class="p-4 bg-surface-0 dark:bg-surface-900" style="border-radius: 8px; background-color:#fff7f6">
@@ -99,13 +36,253 @@
                         </div>
                     </div>
 
-                    <div class="col-span-12 text-center mt-5 ">
-                        <button style="font-size: 17px;" pButton pRipple label="Devis du service" routerLink="/auth/login" [rounded]="true" ></button>
-                        <button style="font-size: 17px;" pButton pRipple label="Devis du service" routerLink="/auth/login" [rounded]="true" ></button>
+                    <div class="col-span-12 text-center mt-5">
+                        <button style="font-size: 17px;" pButton pRipple label="Devis du service" (click)="generatePDF()" [rounded]="true" ></button>
+                        <button style="font-size: 17px;margin-left:10px;color:rgb(91, 91, 91);background-color:rgb(254, 254, 113);border-color:rgb(254, 254, 113)" pButton pRipple label="Prise rendez vous" [rounded]="true" (click)="showDialog()"></button>
                     </div>
-
                 </div>
             </div>
         <app-footer-client />
     </div>
 </div>
+
+
+<p-dialog [(visible)]="visible" [modal]="true" [style]="{ width: '30rem' }">
+    <ng-template #header>
+        <div class="inline-flex items-center justify-center gap-2">
+            <p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" shape="circle" />
+            <span class="font-bold whitespace-nowrap">Amy Elsner</span>
+        </div>
+    </ng-template>
+    <span class="text-surface-500 dark:text-surface-400 block mb-8">Update your information.</span>
+    <div class="flex items-center gap-4 mb-4">
+        <label for="username" class="font-semibold w-24">Username</label>
+        <input pInputText id="username" class="flex-auto" autocomplete="off" />
+    </div>
+    <div class="flex items-center gap-4 mb-2">
+        <label for="email" class="font-semibold w-24">Email</label>
+        <input pInputText id="email" class="flex-auto" autocomplete="off" />
+    </div>
+    <ng-template #footer>
+        <p-button label="Cancel" [text]="true" severity="secondary" (click)="visible = false" />
+        <p-button label="Save" [outlined]="true" severity="secondary" (click)="visible = false" />
+    </ng-template>
+</p-dialog>
+
+
+<style>
+    .entete {
+        color: #7571f9;
+        background-color: white;
+    }
+
+    .carte {
+        color: white;
+        background-color: white;
+    }
+
+    .texte {
+        color: black;
+    }
+
+    .table {
+        color: black;
+    }
+
+    .button-group {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .button-group form {
+        margin-right: 10px;
+        /* Adjust spacing as needed */
+    }
+
+    .form-inline .form-group {
+        margin-right: 5px;
+        /* Reduce the margin between form fields */
+    }
+
+    .form-inline .form-control {
+        padding-left: 5px;
+        /* Adjust padding if needed */
+        padding-right: 5px;
+        /* Adjust padding if needed */
+    }
+
+    .form-group.mb-2,
+    .form-group.mx-sm-1.mb-2 {
+        margin-bottom: 0;
+        /* Remove bottom margin to bring elements closer */
+    }
+
+    .form-inline .form-control-plaintext {
+        margin-right: 5px;
+        /* Reduce space after "Stade" label */
+    }
+
+    .form-inline select,
+    .form-inline button {
+        margin-left: 5px;
+        /* Reduce space before select and button */
+    }
+
+    .apercubc {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: white;
+        border-bottom: solid 3px lightgrey;
+        border-radius: 5px;
+
+    }
+
+    .container {
+        max-width: 900px;
+        margin: 0 auto;
+        background-color: white;
+        padding: 20px;
+        color: black;
+    }
+
+    .product-table {
+        width: 100%;
+        margin-top: 20px;
+        border-collapse: collapse;
+        font-size: 14px;
+        color: rgb(15, 9, 9);
+    }
+
+    .product-table th,
+    .product-table td {
+        border: 1px solid #ddd;
+        text-align: center;
+    }
+
+    .total-section {
+        margin-top: 20px;
+        text-align: right;
+        font-size: 16px;
+    }
+
+    .total-section p {
+        margin: 10px 0;
+    }
+
+    /* double_table */
+
+    .double_table {
+        display: flex;
+        justify-content: space-between;
+        /* Align the two "tables" side by side */
+    }
+
+
+
+
+    .label {
+        font-weight: bold;
+        /* Make the labels bold */
+        display: inline-block;
+        width: 150px;
+        /* Adjust the label width to align content */
+    }
+
+    span {
+        display: inline-block;
+        /* Keep both label and value inline */
+    }
+
+
+    .table-left,
+    .table-right {
+        width: 100%;
+        /* Ajuster la largeur des tables si nécessaire */
+        border-collapse: collapse;
+        /* Pour un style de table net */
+        margin-left: 150px;
+    }
+
+    .strong_tr p {
+        font-weight: bold;
+        margin: 0;
+        padding-right: 10px;
+        /* Optionnel : ajoute un peu d'espace après le texte en gras */
+    }
+
+    td {
+        padding: 8px;
+        border: 1px solid #ddd;
+        /* Optionnel : ajout d'une bordure pour structurer */
+    }
+</style>
+<div class="row apercubc"  style="display: none;">
+    <hr style="border: 0; height: 4px; background-color: white;">
+    <!-- Nouvelle section pour les infos de l'entreprise -->
+    <div class="container" #pdfContent>
+        <div class="row" >
+            <div class="col-12 text-center">
+                <img src="assets/img/logo.jpg" alt="Logo" style="max-width: 150px;"><span><h2>GAR'ANJA</h2></span>
+            </div>
+        </div>
+        <div class="text-center mt-2">
+            <p style=" margin: 5px 0;" class="texte mb-0"><b>Société Anonyme avec conseil d'administration</b></p>
+            <p style=" margin: 5px 0;" class="texte mb-0"><b>au capital de 1 000 000 Ariary</b></p>
+            <p style=" margin: 5px 0;" class="texte mb-0"><b>LOT C50 BIS Analamanga</b></p>
+        </div>
+
+        <hr style="border: 0; height: 2px; background-color: #ddd;">
+
+        <!-- Section déplacée ici pour apparaître au-dessus de l'HR -->
+        <section class="main-info">
+            <div class="double_table mt-3">
+                <div class="table-left">
+                    <p style=" margin: 5px 0;" class="texte mb-0">Date : <b>10/03/24</b></p>
+                    <p style=" margin: 5px 0;" class="texte mb-0">N° BC : <b>123456</b></p>
+                    <p style=" margin: 5px 0;" class="texte mb-0">Fournisseur :<b>Textile Corp</b></p>
+                    <p style=" margin: 5px 0;" class="texte mb-0">Échéance Livraison :<b>20/03/24</b></p>
+                </div>
+                <div class="table-right">
+                    <p style=" margin: 5px 0;" class="texte mb-0">Client : <b>Fashion SA</b></p>
+                    <p style=" margin: 5px 0;" class="texte mb-0">Saison : <b>Été 2024</b></p>
+                    <p style=" margin: 5px 0;" class="texte mb-0">Devise : <b>EUR</b></p>
+                    <p style=" margin: 5px 0;" class="texte mb-0">Pays : <b>France</b></p>
+                </div>
+            </div>
+        </section>
+
+        <hr style="border: 0; height: 2px; background-color: #ddd;">
+
+        <section class="product-table-section">
+            <table class="product-table">
+                <thead style="background-color:#bee5ff;color:black;text-align:center;">
+                    <tr class="table-success" style="height:30px;">
+                        <th>Tache</th>
+                        <th>Modèle</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>T-shirt</td>
+                        <td>Casual Fit</td>
+                    </tr>
+                    <tr>
+                        <td>Pantalon</td>
+                        <td>Regular</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <section class="total-section" style="margin-right: 50px;">
+            <p style=" margin: 5px 0;">TOTAL: <strong>2000</strong> MGA</p>
+            <br><br>
+        </section>
+    </div>
+</div>
+
+
+
+
+
