--- a/src/app/components/client/page/detail-service/detail-service.component.html
+++ b/src/app/components/client/page/detail-service/detail-service.component.html
@@ -47,22 +47,39 @@
 </div>
 
 
-<p-dialog [(visible)]="visible" [modal]="true" [style]="{ width: '30rem' }">
+<p-dialog [(visible)]="visible" [modal]="true" [style]="{ width: '40rem' }">
     <ng-template #header>
         <div class="inline-flex items-center justify-center gap-2">
-            <p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" shape="circle" />
+            <p-avatar image="assets/img/logo.jpg" shape="circle" />
             <span class="font-bold whitespace-nowrap">Amy Elsner</span>
         </div>
     </ng-template>
-    <span class="text-surface-500 dark:text-surface-400 block mb-8">Update your information.</span>
+    <span class="text-surface-500 dark:text-surface-400 block mb-8">Entrer les information du rendez vous</span>
+
+        <p-message closable severity="error">Desoler le cette date a deja ete prix</p-message>
+        <br>
     <div class="flex items-center gap-4 mb-4">
-        <label for="username" class="font-semibold w-24">Username</label>
+        <label for="username" class="font-semibold w-24">Type de vehicule </label>
         <input pInputText id="username" class="flex-auto" autocomplete="off" />
     </div>
     <div class="flex items-center gap-4 mb-2">
-        <label for="email" class="font-semibold w-24">Email</label>
+        <label for="email" class="font-semibold w-24">Matriculation</label>
         <input pInputText id="email" class="flex-auto" autocomplete="off" />
     </div>
+    <div class="flex items-center gap-4 mb-2">
+        <label for="email" class="font-semibold w-24">Date</label>
+        <input pInputText id="email" class="flex-auto" autocomplete="off" />
+    </div>
+    <div class="flex items-center gap-4 mb-2">
+        <label for="email" class="font-semibold w-24">Heure debut</label>
+        <input pInputText id="email" class="flex-auto" autocomplete="off" />
+    </div>
+    <div class="flex items-center gap-4 mb-2">
+        <label for="email" class="font-semibold w-24">Nombre de mecanicien</label>
+        <input pInputText id="email" class="flex-auto" autocomplete="off" />
+    </div>
+    <br>
+    <span class="text-surface-500 dark:text-surface-400 block mb-8"><strong>NB: <b style="color: white;">r</b></strong>le prix du devise change en fonction du nombre de mecanicien choisi</span>
     <ng-template #footer>
         <p-button label="Cancel" [text]="true" severity="secondary" (click)="visible = false" />
         <p-button label="Save" [outlined]="true" severity="secondary" (click)="visible = false" />
