feat:stock-ajout-nombre

--- a/src/app/components/manager/component/dashboard-chart-bar/dashboard-chart-bar.component.html
+++ b/src/app/components/manager/component/dashboard-chart-bar/dashboard-chart-bar.component.html
@@ -4,6 +4,7 @@
         <div class="flex gap-3 mb-3 w-[50%]">
             <p-calendar  view="month" dateFormat="mm" placeholder="Mois"></p-calendar>
             <p-calendar  view="year" dateFormat="yy" placeholder="Année"></p-calendar>
+            <p-button icon="pi pi-search"/>
         </div>
     </div>
     <p-chart type="bar" [data]="barData" [options]="barOptions"></p-chart>
