--- a/src/app/components/manager/component/dashboard-chart-horizontal-bar/dashboard-chart-horizontal-bar.component.html
+++ b/src/app/components/manager/component/dashboard-chart-horizontal-bar/dashboard-chart-horizontal-bar.component.html
@@ -5,6 +5,7 @@
             <p-calendar  view="date" dateFormat="dd" placeholder="Jour"></p-calendar>
             <p-calendar  view="month" dateFormat="mm" placeholder="Mois"></p-calendar>
             <p-calendar  view="year" dateFormat="yy" placeholder="Année"></p-calendar>
+            <p-button icon="pi pi-search"/>
         </div>
     </div>
     <p-chart type="bar" [data]="barData" [options]="barOptions"></p-chart>
