--- a/src/app/components/manager/page/dashboard/dashboard.component.html
+++ b/src/app/components/manager/page/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <div class="flex justify-end gap-3 mb-3 ">
     <p-calendar  view="month" dateFormat="mm" placeholder="Mois"></p-calendar>
     <p-calendar  view="year" dateFormat="yy" placeholder="Année"></p-calendar>
+    <p-button icon="pi pi-search"/>
 </div>
 <div class="grid grid-cols-12 gap-8">
 
