--- a/src/app/components/client/page/topbar-client/topbar-client.component.html
+++ b/src/app/components/client/page/topbar-client/topbar-client.component.html
@@ -37,6 +37,11 @@
                 <span>Faire un devis</span>
             </a>
         </li>
+        <li>
+            <a  pRipple class="px-0 py-4 text-surface-900 dark:text-surface-0 font-medium text-xl" routerLink="/avancement">
+                <span>Avancement</span>
+            </a>
+        </li>
     </ul>
     <div class="flex border-t lg:border-t-0 border-surface py-4 lg:py-0 mt-4 lg:mt-0 gap-2">
         <button pButton pRipple label="Login" routerLink="/login" [rounded]="true" [text]="true" ></button>
