feat:planing-rendez-vous-manager

--- a/src/app/components/client/page/topbar-client/topbar-client.component.html
+++ b/src/app/components/client/page/topbar-client/topbar-client.component.html
@@ -33,7 +33,7 @@
             </a>
         </li>
         <li>
-            <a  pRipple class="px-0 py-4 text-surface-900 dark:text-surface-0 font-medium text-xl">
+            <a  pRipple class="px-0 py-4 text-surface-900 dark:text-surface-0 font-medium text-xl" routerLink="/devisgeneral">
                 <span>Faire un devis</span>
             </a>
         </li>
