--- a/src/app/components/manager/component/service-liste/service-liste.component.html
+++ b/src/app/components/manager/component/service-liste/service-liste.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <p-table
-        [value]="donnee"
+        [value]="services"
         [paginator]="true"
         [rows]="5"
         [tableStyle]="{ 'min-width': '50rem' }"
@@ -23,10 +23,10 @@
                 <th style="width:25%">Description</th>
             </tr>
         </ng-template>
-        <ng-template #body let-donne>
+        <ng-template #body let-service>
             <tr>
-                <td>{{donne.nom}}</td>
-                <td>{{donne.description}}</td>
+                <td>{{service.nom}}</td>
+                <td>{{service.description}}</td>
             </tr>
         </ng-template>
     </p-table>
@@ -36,15 +36,19 @@
 <p-dialog header="Ajout Services" [modal]="true" [(visible)]="visiblenew" [style]="{ width: '25rem' }">
     <div class="flex items-center gap-4 mb-4">
         <label for="username" class="font-semibold w-24">Nom Service</label>
-        <input pInputText id="username" class="flex-auto" autocomplete="off"   />
+        <input pInputText id="username" class="flex-auto" autocomplete="off"  name="nom"  [(ngModel)]="newService.nom" />
     </div>
     <div class="flex items-center gap-4 mb-4">
         <label for="username" class="font-semibold w-24">Description</label>
-        <input pInputText id="username" class="flex-auto" autocomplete="off"   />
+        <input pInputText id="username" class="flex-auto" autocomplete="off" name="description" [(ngModel)]="newService.description" />
+    </div>
+    <div class="flex items-center gap-4 mb-4">
+        <label for="username" class="font-semibold w-24">Image</label>
+        <input pInputText id="username" class="flex-auto" autocomplete="off" name="img"  [(ngModel)]="newService.img"/>
     </div>
     <div class="flex justify-end gap-2">
         <p-button label="Cancel" severity="secondary" (click)="visiblenew = false" />
-        <p-button label="Save" (click)="visiblenew = false" />
+        <p-button label="Save" (click)="visiblenew = false ; addService()" />
     </div>
 </p-dialog>
 
