fix:insert service

--- a/src/app/components/manager/component/service-liste/service-liste.component.html
+++ b/src/app/components/manager/component/service-liste/service-liste.component.html
@@ -3,10 +3,7 @@
         <p-button (click)="showDialogNew()" icon="pi pi-plus" label="New" severity="info" />
     </div>
     <div class="flex mb-5 gap-3">
-        <input type="text" pInputText  variant="filled" placeholder="Nom Piece"/>
-        <input type="text" pInputText  variant="filled" placeholder="Modele Voiture"/>
-        <p-select [options]="type"  placeholder="Type voiture" [editable]="true" optionLabel="name" class="w-full md:w-56" />
-        <p-select [options]="modele"  placeholder="Type moteur" [editable]="true" optionLabel="name" class="w-full md:w-56" />
+        <input type="text" pInputText  variant="filled" placeholder="Nom Service"/>
         <p-button icon="pi pi-search"/>
     </div>
 
