--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -25,7 +25,7 @@
 
                             <label for="password1"
                                 class="block text-surface-900 dark:text-surface-0 font-medium text-xl mb-2">Password</label>
-                            <p-password id="password1" [(ngModel)]="password" placeholder="Mot de passe..."
+                            <p-password id="password1" [(ngModel)]="mdp" placeholder="Mot de passe..."
                                 [toggleMask]="true" styleClass="mb-4" [fluid]="true" [feedback]="false"></p-password>
 
                             <div class="flex items-center justify-between mt-2 mb-8 gap-8">
@@ -34,7 +34,7 @@
                                 <span
                                     class="font-medium no-underline ml-2 text-right cursor-pointer text-primary">S'inscrire</span>
                             </div>
-                            <p-button label="Se connecter" styleClass="w-full" routerLink="/"></p-button>
+                            <p-button label="Se connecter" styleClass="w-full" (click)="login()"></p-button>
                         </div>
                     </div>
                 </div>
