--- a/src/app/components/client/page/topbar-client/topbar-client.component.html
+++ b/src/app/components/client/page/topbar-client/topbar-client.component.html
@@ -28,8 +28,8 @@
             </a>
         </li>
         <li>
-            <a  pRipple class="px-0 py-4 text-surface-900 dark:text-surface-0 font-medium text-xl">
-                <span>Faire un diagnostic</span>
+            <a  pRipple class="px-0 py-4 text-surface-900 dark:text-surface-0 font-medium text-xl" routerLink="/diagnostic">
+                <span>Diagnostic</span>
             </a>
         </li>
         <li>
