--- a/src/app/components/manager/component/stock-liste/stock-liste.component.html
+++ b/src/app/components/manager/component/stock-liste/stock-liste.component.html
@@ -15,24 +15,24 @@
     >
         <ng-template #header>
             <tr>
+                <th style="width:25%">Reference</th>
                 <th style="width:25%">Nom Piece</th>
-                <th style="width:25%">Modele voiture</th>
-                <th style="width:25%">Type voiture</th>
-                <th style="width:25%">Type moteur</th>
+                <th style="width:25%">Marque vehicule</th>
+                <th style="width:25%">Modele</th>
                 <th style="width:25%">Prix</th>
                 <th style="width:25%">Nombre</th>
             </tr>
         </ng-template>
         <ng-template #body let-donne>
             <tr>
-                <td>{{donne.nom}}</td>
-                <td>{{donne.modele}}</td>
-                <td>{{donne.type}}</td>
-                <td>{{donne.moteur}}</td>
-                <td>{{donne.prix}}</td>
-                <td>{{donne.nombre}}</td>
+                <td>{{ donne.reference }}</td>
+                <td>{{ donne.nomPiece }}</td>
+                <td>{{ donne.marqueDetails?.marqueVehicule }}</td>
+                <td>{{ donne.modeleDetails?.modeleVehicule }}</td>
+                <td>{{ donne.prix }}</td>
+                <td>{{ donne.stockDifference }}</td>
                 <td>
-                    <p-button (click)="showDialog()" icon="pi pi-plus" />
+                    <p-button (click)="showDialog(donne)" icon="pi pi-plus" />
                 </td>
             </tr>
         </ng-template>
@@ -42,19 +42,19 @@
 <p-dialog header="Commande Pieces" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
     <div class="flex items-center gap-4 mb-4">
         <label for="username" class="font-semibold w-24">Nom Piece</label>
-        <input pInputText id="username" class="flex-auto" autocomplete="off" value="Turbo-compresseur" disabled />
+        <input pInputText id="username" class="flex-auto" autocomplete="off" [value]="selectedItem?.nomPiece" disabled />
     </div>
     <div class="flex items-center gap-4 mb-4">
         <label for="username" class="font-semibold w-24">Modele voiture</label>
-        <input pInputText id="username" class="flex-auto" autocomplete="off" value="Turbo-compresseur" disabled />
+        <input pInputText id="username" class="flex-auto" autocomplete="off" [value]="selectedItem?.modeleDetails?.modeleVehicule" disabled />
     </div>
     <div class="flex items-center gap-4 mb-4">
         <label for="username" class="font-semibold w-24">Type voiture</label>
-        <input pInputText id="username" class="flex-auto" autocomplete="off" value="Turbo-compresseur" disabled />
+        <input pInputText id="username" class="flex-auto" autocomplete="off" [value]="selectedItem?.marqueDetails?.marqueVehicule" disabled />
     </div>
     <div class="flex items-center gap-4 mb-4">
         <label for="username" class="font-semibold w-24">Type moteur</label>
-        <input pInputText id="username" class="flex-auto" autocomplete="off" value="Turbo-compresseur" disabled />
+        <input pInputText id="username" class="flex-auto" autocomplete="off" [value]="selectedItem?.prix" disabled />
     </div>
     <div class="flex items-center gap-4 mb-8">
         <label for="email" class="font-semibold w-24">Nombre</label>
@@ -64,7 +64,8 @@
             class="flex-auto"
             autocomplete="off"
             type="number"
-            value="2"
+            [value]="selectedItem?.stockDifference"
+            [(ngModel)]="selectedItem.stockDifference"
             min="0"
         />
 
