--- a/src/app/components/manager/component/liste-commande-pieces/liste-commande-pieces.component.html
+++ b/src/app/components/manager/component/liste-commande-pieces/liste-commande-pieces.component.html
@@ -19,22 +19,20 @@
     >
         <ng-template #header>
             <tr>
+                <th style="width:25%">Reference</th>
                 <th style="width:25%">Nom Piece</th>
-                <th style="width:25%">Modele voiture</th>
-                <th style="width:25%">Type voiture</th>
-                <th style="width:25%">Type moteur</th>
-                <th style="width:25%">Prix</th>
+                <th style="width:25%">Marque vehicule</th>
+                <th style="width:25%">Modele</th>
                 <th style="width:25%">Nombre</th>
             </tr>
         </ng-template>
         <ng-template #body let-donne>
             <tr>
-                <td>{{donne.nom}}</td>
-                <td>{{donne.modele}}</td>
-                <td>{{donne.type}}</td>
-                <td>{{donne.moteur}}</td>
-                <td>{{donne.prix}}</td>
-                <td>{{donne.nombre}}</td>
+                <td>{{ donne.pieces.reference }}</td>
+                <td>{{ donne.pieces.nomPiece }}</td>
+                <td>{{ donne.pieces.marqueVehicule.marqueVehicule }}</td>
+                <td>{{ donne.pieces.modeleVehicule.modeleVehicule }}</td>
+                <td>{{ donne.nombre }}</td>
                 <td>
                     <p-button (click)="showDialogCheck()" icon="pi pi-check" />
                 </td>
@@ -81,36 +79,40 @@
 <!-- modal new -->
 <p-dialog header="Ajout Pieces" [modal]="true" [(visible)]="visiblenew" [style]="{ width: '25rem' }">
     <div class="flex items-center gap-4 mb-4">
-        <label for="username" class="font-semibold w-24">Nom Piece</label>
-        <input pInputText id="username" class="flex-auto" autocomplete="off"   />
+        <label for="nomPiece" class="font-semibold w-24">Nom Piece</label>
+        <input pInputText id="nomPiece" class="flex-auto" autocomplete="off" [(ngModel)]="newArticle.nomPiece" />
     </div>
     <div class="flex items-center gap-4 mb-4">
-        <label for="username" class="font-semibold w-24">Modele voiture</label>
-        <input pInputText id="username" class="flex-auto" autocomplete="off"   />
+        <label for="modeleVoiture" class="font-semibold w-24">Reference</label>
+        <input pInputText id="modeleVoiture" class="flex-auto" autocomplete="off" [(ngModel)]="newArticle.reference" />
     </div>
     <div class="flex items-center gap-4 mb-4">
-        <label for="username" class="font-semibold w-24">Type voiture</label>
-        <input pInputText id="username" class="flex-auto" autocomplete="off"   />
+        <label for="modeleVoiture" class="font-semibold w-24">Modele voiture</label>
+        <input pInputText id="modeleVoiture" class="flex-auto" autocomplete="off" [(ngModel)]="newArticle.modeleVehicule" />
     </div>
     <div class="flex items-center gap-4 mb-4">
-        <label for="username" class="font-semibold w-24">Type moteur</label>
-        <input pInputText id="username" class="flex-auto" autocomplete="off"   />
+        <label for="typeVoiture" class="font-semibold w-24">Type voiture</label>
+        <input pInputText id="typeVoiture" class="flex-auto" autocomplete="off" [(ngModel)]="newArticle.marqueVehicule" />
+    </div>
+    <div class="flex items-center gap-4 mb-4">
+        <label for="typeMoteur" class="font-semibold w-24">Type moteur</label>
+        <input pInputText id="typeMoteur" class="flex-auto" autocomplete="off" [(ngModel)]="newArticle.categorieVehicule" />
     </div>
     <div class="flex items-center gap-4 mb-8">
-        <label for="email" class="font-semibold w-24">Nombre </label>
+        <label for="nombre" class="font-semibold w-24">Nombre</label>
         <input
             pInputText
             id="nombre"
             class="flex-auto"
             autocomplete="off"
             type="number"
-            value="2"
+            [(ngModel)]="newArticle.prix"
             min="0"
         />
-
     </div>
     <div class="flex justify-end gap-2">
         <p-button label="Cancel" severity="secondary" (click)="visiblenew = false" />
-        <p-button label="Save" (click)="visiblenew = false" />
+        <p-button label="Save" (click)="addPieces()" />
     </div>
 </p-dialog>
+
