--- a/src/app/components/manager/component/stock-liste/stock-liste.component.html
+++ b/src/app/components/manager/component/stock-liste/stock-liste.component.html
@@ -65,13 +65,13 @@
             autocomplete="off"
             type="number"
             [value]="selectedItem?.stockDifference"
-            [(ngModel)]="selectedItem.stockDifference"
+            [(ngModel)]="newCommande.stockDifference"
             min="0"
         />
 
     </div>
     <div class="flex justify-end gap-2">
         <p-button label="Cancel" severity="secondary" (click)="visible = false" />
-        <p-button label="Save" (click)="visible = false" />
+        <p-button label="Save" (click)="saveCommande()" />
     </div>
 </p-dialog>
