--- a/src/app/components/manager/component/liste-commande-pieces/liste-commande-pieces.component.html
+++ b/src/app/components/manager/component/liste-commande-pieces/liste-commande-pieces.component.html
@@ -5,8 +5,8 @@
     <div class="flex mb-5 gap-3">
         <input type="text" pInputText  variant="filled" placeholder="Nom Piece"/>
         <input type="text" pInputText  variant="filled" placeholder="Modele Voiture"/>
-        <p-select [options]="type"  placeholder="Type voiture" [editable]="true" optionLabel="name" class="w-full md:w-56" />
-        <p-select [options]="modele"  placeholder="Type moteur" [editable]="true" optionLabel="name" class="w-full md:w-56" />
+        <p-select [options]="typeV"  placeholder="Type voiture" [editable]="true" optionLabel="name" class="w-full md:w-56" />
+        <p-select [options]="typeM"  placeholder="Type moteur" [editable]="true" optionLabel="name" class="w-full md:w-56" />
         <p-button icon="pi pi-search"/>
     </div>
 
@@ -33,76 +33,87 @@
                 <td>{{ donne.pieces.marqueVehicule.marqueVehicule }}</td>
                 <td>{{ donne.pieces.modeleVehicule.modeleVehicule }}</td>
                 <td>{{ donne.nombre }}</td>
-                <td>
-                    <p-button (click)="showDialogCheck()" icon="pi pi-check" />
+                <td class="flex gap-2">
+                    <p-button (click)="showDialogCheck(donne)" icon="pi pi-check" />
+                    <p-button (click)="deleteCommande(donne._id)" icon="pi pi-trash" severity="danger" />
                 </td>
             </tr>
         </ng-template>
     </p-table>
 </div>
-<!-- modal check -->
-<p-dialog header="Verification Pieces" [modal]="true" [(visible)]="visiblecheck" [style]="{ width: '25rem' }">
+<!-- Modal check -->
+<p-dialog header="Vérification Pièces" [modal]="true" [(visible)]="visiblecheck" [style]="{ width: '25rem' }">
     <div class="flex items-center gap-4 mb-4">
-        <label for="username" class="font-semibold w-24">Nom Piece</label>
-        <input pInputText id="username" class="flex-auto" autocomplete="off" value="Turbo-compresseur" disabled />
+        <label class="font-semibold w-24">Nom Pièce</label>
+        <input pInputText class="flex-auto" autocomplete="off" [value]="selectedCommande?.pieces.nomPiece" disabled />
     </div>
     <div class="flex items-center gap-4 mb-4">
-        <label for="username" class="font-semibold w-24">Modele voiture</label>
-        <input pInputText id="username" class="flex-auto" autocomplete="off" value="Turbo-compresseur" disabled />
-    </div>
-    <div class="flex items-center gap-4 mb-4">
-        <label for="username" class="font-semibold w-24">Type voiture</label>
-        <input pInputText id="username" class="flex-auto" autocomplete="off" value="Turbo-compresseur" disabled />
-    </div>
-    <div class="flex items-center gap-4 mb-4">
-        <label for="username" class="font-semibold w-24">Type moteur</label>
-        <input pInputText id="username" class="flex-auto" autocomplete="off" value="Turbo-compresseur" disabled />
+        <label class="font-semibold w-24">Modèle Voiture</label>
+        <input pInputText class="flex-auto" autocomplete="off" [value]="selectedCommande?.pieces.modeleVehicule.modeleVehicule" disabled />
     </div>
     <div class="flex items-center gap-4 mb-8">
-        <label for="email" class="font-semibold w-24">Nombre Arrivé</label>
-        <input
-            pInputText
-            id="nombre"
-            class="flex-auto"
-            autocomplete="off"
-            type="number"
-            value="2"
-            min="0"
-        />
-
+        <label class="font-semibold w-24">Nombre Arrivé</label>
+        <input pInputText class="flex-auto" type="number" min="1" [(ngModel)]="nombreArrive" />
     </div>
     <div class="flex justify-end gap-2">
-        <p-button label="Cancel" severity="secondary" (click)="visiblecheck = false" />
-        <p-button label="Save" (click)="visiblecheck = false" />
+        <p-button label="Annuler" severity="secondary" (click)="visiblecheck = false" />
+        <p-button label="Enregistrer" (click)="checkCommande()" />
     </div>
 </p-dialog>
+
 <!-- modal new -->
-<p-dialog header="Ajout Pieces" [modal]="true" [(visible)]="visiblenew" [style]="{ width: '25rem' }">
+<p-dialog header="Ajout Pièces" [modal]="true" [(visible)]="visiblenew" [style]="{ width: '25rem' }">
     <div class="flex items-center gap-4 mb-4">
-        <label for="nomPiece" class="font-semibold w-24">Nom Piece</label>
+        <label for="nomPiece" class="font-semibold w-24">Nom Pièce</label>
         <input pInputText id="nomPiece" class="flex-auto" autocomplete="off" [(ngModel)]="newArticle.nomPiece" />
     </div>
+
     <div class="flex items-center gap-4 mb-4">
-        <label for="modeleVoiture" class="font-semibold w-24">Reference</label>
-        <input pInputText id="modeleVoiture" class="flex-auto" autocomplete="off" [(ngModel)]="newArticle.reference" />
+        <label for="reference" class="font-semibold w-24">Référence</label>
+        <input pInputText id="reference" class="flex-auto" autocomplete="off" [(ngModel)]="newArticle.reference" />
     </div>
+
     <div class="flex items-center gap-4 mb-4">
-        <label for="modeleVoiture" class="font-semibold w-24">Modele voiture</label>
-        <input pInputText id="modeleVoiture" class="flex-auto" autocomplete="off" [(ngModel)]="newArticle.modeleVehicule" />
+        <label for="marqueVehicule" class="font-semibold w-24">Marque Véhicule</label>
+        <p-select
+            [options]="marque"
+            [(ngModel)]="newArticle.marqueVehicule"
+            optionLabel="name"
+            optionValue="id"
+            placeholder="Sélectionnez une marque"
+            class="w-full md:w-56"
+        />
     </div>
+
     <div class="flex items-center gap-4 mb-4">
-        <label for="typeVoiture" class="font-semibold w-24">Type voiture</label>
-        <input pInputText id="typeVoiture" class="flex-auto" autocomplete="off" [(ngModel)]="newArticle.marqueVehicule" />
+        <label for="modeleVehicule" class="font-semibold w-24">Modèle Voiture</label>
+        <p-select
+            [options]="modele"
+            [(ngModel)]="newArticle.modeleVehicule"
+            optionLabel="name"
+            optionValue="id"
+            placeholder="Sélectionnez un modèle"
+            class="w-full md:w-56"
+        />
     </div>
+
     <div class="flex items-center gap-4 mb-4">
-        <label for="typeMoteur" class="font-semibold w-24">Type moteur</label>
-        <input pInputText id="typeMoteur" class="flex-auto" autocomplete="off" [(ngModel)]="newArticle.categorieVehicule" />
+        <label for="categorieVehicule" class="font-semibold w-24">Catégorie Véhicule</label>
+        <p-select
+            [options]="categorie"
+            [(ngModel)]="newArticle.categorieVehicule"
+            optionLabel="name"
+            optionValue="id"
+            placeholder="Sélectionnez une catégorie"
+            class="w-full md:w-56"
+        />
     </div>
+
     <div class="flex items-center gap-4 mb-8">
-        <label for="nombre" class="font-semibold w-24">Nombre</label>
+        <label for="prix" class="font-semibold w-24">Prix</label>
         <input
             pInputText
-            id="nombre"
+            id="prix"
             class="flex-auto"
             autocomplete="off"
             type="number"
@@ -110,9 +121,11 @@
             min="0"
         />
     </div>
+
     <div class="flex justify-end gap-2">
-        <p-button label="Cancel" severity="secondary" (click)="visiblenew = false" />
-        <p-button label="Save" (click)="addPieces()" />
+        <p-button label="Annuler" severity="secondary" (click)="visiblenew = false" />
+        <p-button label="Enregistrer" (click)="addPiece()" />
     </div>
 </p-dialog>
+
 
